@@ -18,7 +18,7 @@
    <parent>
       <groupId>org.eclipse.esmf</groupId>
       <artifactId>esmf-parent</artifactId>
-      <version>21</version>
+      <version>27</version>
    </parent>
 
    <artifactId>esmf-sdk-parent</artifactId>
@@ -49,6 +49,7 @@
    </scm>
 
    <modules>
+      <module>core/esmf-util</module>
       <module>core/esmf-aspect-meta-model-interface</module>
       <module>core/esmf-aspect-meta-model-java</module>
       <module>core/esmf-aspect-model-aas-generator</module>
@@ -63,7 +64,8 @@
       <module>core/esmf-aspect-model-urn</module>
       <module>core/esmf-aspect-model-validator</module>
       <module>core/esmf-aspect-static-meta-model-java</module>
-      <module>core/esmf-native-support</module>
+      <module>core/esmf-tree-sitter-turtle</module>
+      <module>core/esmf-turtle-language-server</module>
       <module>core/esmf-test-aspect-models</module>
       <module>core/esmf-test-resources</module>
       <module>tools/esmf-aspect-model-maven-plugin</module>
@@ -73,19 +75,25 @@
 
    <properties>
       <!-- General settings -->
-      <skip.gpg.skip>true</skip.gpg.skip>
+      <skip.maven.surefire>false</skip.maven.surefire>
+      <skip.maven.shade>false</skip.maven.shade>
+      <skip.maven.failsafe>false</skip.maven.failsafe>
       <build-time-sources>${project.basedir}/src-buildtime</build-time-sources>
       <generated-sources>${project.basedir}/src-gen</generated-sources>
-      <relative-native-config-path>core/esmf-native-support/src-gen/main/resources/META-INF/native-image/${project.groupId}/esmf-native-support</relative-native-config-path>
-      <!-- The path to the native configs as it is reachable from the submodules -->
-      <native-config-path>${project.basedir}/../../${relative-native-config-path}</native-config-path>
-      <!-- Can be removed once configured in esmf-parent -->
-      <central-publishing-maven-plugin-version>0.8.0</central-publishing-maven-plugin-version>
+
+      <!-- Fix graalvm version to latest version in which truffle still
+        supports x86_64 mac. Can be removed when build is switched to aarch64 -->
+      <graalvm.version>25.0.2</graalvm.version>
    </properties>
 
    <dependencyManagement>
       <!-- Internal projects -->
       <dependencies>
+         <dependency>
+            <groupId>org.eclipse.esmf</groupId>
+            <artifactId>esmf-util</artifactId>
+            <version>${project.version}</version>
+         </dependency>
          <dependency>
             <groupId>org.eclipse.esmf</groupId>
             <artifactId>esmf-aspect-meta-model-interface</artifactId>
@@ -114,6 +122,11 @@
          <dependency>
             <groupId>org.eclipse.esmf</groupId>
             <artifactId>esmf-aspect-model-github-resolver</artifactId>
+            <version>${project.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.eclipse.esmf</groupId>
+            <artifactId>esmf-turtle-language-server</artifactId>
             <version>${project.version}</version>
          </dependency>
          <dependency>
@@ -158,7 +171,7 @@
          </dependency>
          <dependency>
             <groupId>org.eclipse.esmf</groupId>
-            <artifactId>esmf-native-support</artifactId>
+            <artifactId>esmf-tree-sitter-turtle</artifactId>
             <version>${project.version}</version>
          </dependency>
          <dependency>
@@ -187,90 +200,36 @@
          <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-dependencies</artifactId>
-            <version>${spring-boot-version}</version>
+            <version>${spring-boot.version}</version>
             <type>pom</type>
             <scope>import</scope>
          </dependency>
+
+         <!-- Overrides due to CVEs -->
          <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-to-slf4j</artifactId>
-            <version>${log4j-version}</version>
-         </dependency>
-         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>${log4j-version}</version>
-         </dependency>
-         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>${log4j-version}</version>
-         </dependency>
-         <dependency>
-            <groupId>org.twdata.maven</groupId>
-            <artifactId>mojo-executor</artifactId>
-            <version>${mojo-executor-version}</version>
-         </dependency>
-         <dependency>
-            <groupId>org.graphper</groupId>
-            <artifactId>graph-support-core</artifactId>
-            <version>${graph-support-version}</version>
+            <groupId>org.apache.maven.shared</groupId>
+            <artifactId>maven-shared-utils</artifactId>
+            <version>[3.3.3,)</version>
          </dependency>
       </dependencies>
    </dependencyManagement>
 
-   <dependencies>
-      <!-- Overrides due to CVEs -->
-      <dependency>
-         <groupId>org.apache.maven.shared</groupId>
-         <artifactId>maven-shared-utils</artifactId>
-         <version>[3.3.3,)</version>
-      </dependency>
-      <dependency>
-         <groupId>commons-io</groupId>
-         <artifactId>commons-io</artifactId>
-         <version>[2.16.1,)</version>
-      </dependency>
-      <dependency>
-         <groupId>org.codehaus.plexus</groupId>
-         <artifactId>plexus-archiver</artifactId>
-         <version>[4.8.0,)</version>
-      </dependency>
-   </dependencies>
-
    <build>
-      <!-- Can be removed once configured in esmf-parent -->
-      <pluginManagement>
-         <plugins>
-            <plugin>
-               <groupId>org.sonatype.central</groupId>
-               <artifactId>central-publishing-maven-plugin</artifactId>
-               <version>${central-publishing-maven-plugin-version}</version>
-            </plugin>
-         </plugins>
-      </pluginManagement>
-
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-enforcer-plugin</artifactId>
             <executions>
                <execution>
-                  <id>esmf-enforce-graalvm</id>
+                  <id>esmf-enforce</id>
                   <goals>
                      <goal>enforce</goal>
                   </goals>
                   <configuration>
                      <rules>
-                        <requireProperty>
-                           <property>java.vendor.version</property>
-                           <message>Could not determine JDK vendor version (java.vendor.version property)</message>
-                           <regex>.*GraalVM.*</regex>
-                           <regexMessage>A GraalVM JDK is required to build this project</regexMessage>
-                        </requireProperty>
                         <requireJavaVersion>
-                           <version>21</version>
-                           <message>Java 21 or newer is required to build this project</message>
+                           <version>${java-target.version}</version>
+                           <message>Java ${java-target.version} or newer is required to build this project</message>
                         </requireJavaVersion>
                      </rules>
                   </configuration>
@@ -291,22 +250,45 @@
          </plugin>
 
          <plugin>
+            <groupId>com.diffplug.spotless</groupId>
+            <artifactId>spotless-maven-plugin</artifactId>
+            <configuration>
+               <formats>
+                  <format combine.children="append">
+                     <excludes>
+                        <exclude>**/target/**</exclude>
+                        <exclude>.idea/**</exclude>
+                        <exclude>**/InvalidEncoding.ttl</exclude>
+                        <exclude>**/src/test/resources/submodel-templates/**</exclude>
+                     </excludes>
+                  </format>
+               </formats>
+            </configuration>
+         </plugin>
+
+         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-clean-plugin</artifactId>
             <inherited>false</inherited>
+         </plugin>
+
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-               <filesets>
-                  <fileset>
-                     <directory>${relative-native-config-path}</directory>
-                  </fileset>
-               </filesets>
+               <skip>${skip.maven.surefire}</skip>
+               <properties>
+                  <configurationParameters>
+                     junit.jupiter.execution.parallel.enabled = true
+                  </configurationParameters>
+               </properties>
+               <argLine>--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</argLine>
             </configuration>
          </plugin>
 
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-deploy-plugin</artifactId>
-            <version>${maven-deploy-plugin-version}</version>
             <configuration>
                <skip>true</skip>
             </configuration>
@@ -325,35 +307,4 @@
          </plugin>
       </plugins>
    </build>
-
-   <profiles>
-      <profile>
-         <id>native</id>
-         <build>
-            <plugins>
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-surefire-plugin</artifactId>
-                  <configuration>
-                     <skip>false</skip>
-                     <argLine>-agentlib:native-image-agent=config-merge-dir=${native-config-path}</argLine>
-                  </configuration>
-               </plugin>
-
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-clean-plugin</artifactId>
-                  <inherited>false</inherited>
-                  <configuration>
-                     <filesets>
-                        <fileset>
-                           <directory>${relative-native-config-path}</directory>
-                        </fileset>
-                     </filesets>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-   </profiles>
 </project>
