@@ -28,13 +28,8 @@
    <packaging>jar</packaging>
 
    <properties>
-      <packaging-type>jar</packaging-type>
       <main-class>org.eclipse.esmf.SammCli</main-class>
-      <binary-name>samm</binary-name>
-      <skip.maven.surefire>false</skip.maven.surefire>
       <skip.maven.failsafe>false</skip.maven.failsafe>
-      <skip.maven.surefire.report.plugin>false</skip.maven.surefire.report.plugin>
-      <skip.maven.shade>false</skip.maven.shade>
    </properties>
 
    <dependencies>
@@ -52,10 +47,10 @@
       </dependency>
       <dependency>
          <groupId>org.eclipse.esmf</groupId>
-         <artifactId>esmf-native-support</artifactId>
+         <artifactId>esmf-turtle-language-server</artifactId>
       </dependency>
       <dependency>
-         <groupId>com.fasterxml.jackson.core</groupId>
+         <groupId>tools.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
       </dependency>
       <dependency>
@@ -87,26 +82,22 @@
          <artifactId>jansi</artifactId>
       </dependency>
       <dependency>
-         <groupId>org.graalvm.sdk</groupId>
-         <artifactId>graal-sdk</artifactId>
-         <version>${graalvm-version}</version>
-      </dependency>
-      <dependency>
          <groupId>org.graalvm.polyglot</groupId>
          <artifactId>polyglot</artifactId>
-         <version>${graalvm-version}</version>
       </dependency>
       <dependency>
          <groupId>org.graalvm.polyglot</groupId>
          <artifactId>js</artifactId>
-         <version>${graalvm-version}</version>
          <type>pom</type>
       </dependency>
       <dependency>
          <groupId>org.graalvm.js</groupId>
          <artifactId>js-scriptengine</artifactId>
          <type>jar</type>
-         <version>${graalvm-version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.jspecify</groupId>
+         <artifactId>jspecify</artifactId>
       </dependency>
 
       <!-- Test dependencies -->
@@ -167,20 +158,42 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-               <systemPropertyVariables>
-                  <packaging-type>${packaging-type}</packaging-type>
-                  <executableJar>${project.build.directory}/${project.artifactId}-${project.version}.jar</executableJar>
-                  <binary>${project.build.directory}/${binary-name}</binary>
-               </systemPropertyVariables>
+               <skip>${skip.maven.surefire}</skip>
                <forkCount>1</forkCount>
                <reuseForks>false</reuseForks>
                <argLine>-Xmx6g</argLine>
-               <skip>${skip.maven.surefire}</skip>
                <reportsDirectory>${project.build.directory}/${testreports.surefire}</reportsDirectory>
                <!-- Do NOT wildcard include *Test.java, because then we would also run the SammCliIntegrationTest -->
                <includes>
                   <include>**/SammCliTest.java</include>
                   <include>**/CommandExecutorTest.java</include>
+               </includes>
+            </configuration>
+         </plugin>
+
+         <!-- Configure maven failsafe plugin (execution of integration tests) -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>${maven-failsafe-plugin.version}</version>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>integration-test</goal>
+                     <goal>verify</goal>
+                  </goals>
+               </execution>
+            </executions>
+            <configuration>
+               <skipITs>${skip.maven.failsafe}</skipITs>
+               <forkCount>1</forkCount>
+               <reuseForks>true</reuseForks>
+               <argLine>-Xmx4096m</argLine>
+               <systemPropertyVariables>
+                  <executableJar>${project.build.directory}/${project.artifactId}-${project.version}.jar</executableJar>
+               </systemPropertyVariables>
+               <includes>
+                  <include>**/SammCliIntegrationTest.java</include>
                </includes>
             </configuration>
          </plugin>
@@ -216,6 +229,7 @@
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <manifestEntries>
                               <Main-Class>${main-class}</Main-Class>
+                              <Multi-Release>true</Multi-Release>
                            </manifestEntries>
                         </transformer>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
@@ -231,12 +245,11 @@
                         <filter>
                            <artifact>*:*</artifact>
                            <excludes>
-                              <exclude>module-info.class</exclude>
+                              <!-- Exclude module-info.class files also from subfolders like versions -->
+                              <exclude>**/module-info.class</exclude>
                               <exclude>META-INF/*</exclude>
                               <exclude>META-INF/sisu/javax.inject.Named</exclude>
                               <exclude>META-INF/plexus/components.xml</exclude>
-                              <exclude>META-INF.versions*/**</exclude>
-                              <exclude>META-INF/versions*/**</exclude>
                               <exclude>META-INF/maven/**</exclude>
                               <exclude>plugin.xml</exclude>
                               <exclude>about.html</exclude>
@@ -268,13 +281,6 @@
                            <artifact>org.apache.xmlgraphics:batik-svgrasterizer</artifact>
                            <excludes>
                               <exclude>org/apache/batik/apps/rasterizer/resources/rasterizer.policy</exclude>
-                           </excludes>
-                        </filter>
-                        <!-- These configs add lots of spurious GraalVM configuration -->
-                        <filter>
-                           <artifact>org.jboss.forge.roaster:roaster-jdt</artifact>
-                           <excludes>
-                              <exclude>META-INF/native-image/**</exclude>
                            </excludes>
                         </filter>
                         <!-- Required to have Model Instantiators available -->
@@ -331,42 +337,11 @@
                   <path>
                      <groupId>info.picocli</groupId>
                      <artifactId>picocli-codegen</artifactId>
-                     <version>${picocli-version}</version>
+                     <version>${picocli.version}</version>
                   </path>
                </annotationProcessorPaths>
                <forceLegacyJavacApi>true</forceLegacyJavacApi>
                <showDeprecation>false</showDeprecation>
-            </configuration>
-         </plugin>
-
-         <!-- Configure maven failsave plugin (execution of integration tests) -->
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <version>${maven-failsafe-plugin-version}</version>
-            <executions>
-               <execution>
-                  <goals>
-                     <goal>integration-test</goal>
-                     <goal>verify</goal>
-                  </goals>
-               </execution>
-            </executions>
-            <configuration>
-               <skipITs>${skip.maven.failsafe}</skipITs>
-               <systemPropertyVariables>
-                  <packaging-type>${packaging-type}</packaging-type>
-                  <executableJar>${project.build.directory}/${project.artifactId}-${project.version}.jar
-                  </executableJar>
-                  <binary>${project.build.directory}/${binary-name}</binary>
-                  <nativeConfigPath>${native-config-path}</nativeConfigPath>
-                  <forkCount>1</forkCount>
-                  <reuseForks>true</reuseForks>
-                  <argLine>-Xmx4096m</argLine>
-               </systemPropertyVariables>
-               <includes>
-                  <include>**/SammCliIntegrationTest.java</include>
-               </includes>
             </configuration>
          </plugin>
 
@@ -404,123 +379,4 @@
       </plugins>
    </build>
 
-   <profiles>
-      <profile>
-         <id>copy-font-configuration</id>
-         <activation>
-            <os>
-               <family>windows</family>
-            </os>
-         </activation>
-         <build>
-            <plugins>
-               <!-- Copy font configuration files from the GraalVM directory (pointed to by JAVA_HOME in native builds) to the output directory -->
-               <plugin>
-                  <groupId>org.codehaus.mojo</groupId>
-                  <artifactId>wagon-maven-plugin</artifactId>
-                  <version>${wagon-maven-plugin-version}</version>
-                  <executions>
-                     <execution>
-                        <id>copy-fontconfig-bfc</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                           <goal>download-single</goal>
-                        </goals>
-                        <configuration>
-                           <url>file://${env.JAVA_HOME}/lib</url>
-                           <fromFile>fontconfig.bfc</fromFile>
-                           <toFile>${project.build.outputDirectory}/fontconfig.bfc</toFile>
-                        </configuration>
-                     </execution>
-                  </executions>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-
-      <!--
-      This profile is active by default and will disable the generation of the source jar.
-      When the native profile (see below) is active, the source jar will be generated.
-      If we don't do it like this, the source jar is created and attached twice, which
-      trips up Maven: "We have duplicated artifacts attached."
-      -->
-      <profile>
-         <id>non-native</id>
-         <activation>
-            <activeByDefault>true</activeByDefault>
-         </activation>
-         <properties>
-            <maven.source.skip>true</maven.source.skip>
-         </properties>
-      </profile>
-
-      <profile>
-         <id>native</id>
-         <properties>
-            <packaging-type>native</packaging-type>
-            <skip.maven.surefire>true</skip.maven.surefire>
-            <skip.maven.failsafe>false</skip.maven.failsafe>
-            <skip.maven.shade>true</skip.maven.shade>
-            <maven.source.skip>false</maven.source.skip>
-         </properties>
-
-         <build>
-            <plugins>
-               <!-- When building native, skip build the jar -->
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-jar-plugin</artifactId>
-                  <executions>
-                     <execution>
-                        <id>default-jar</id>
-                        <phase>none</phase>
-                     </execution>
-                  </executions>
-               </plugin>
-
-               <plugin>
-                  <groupId>org.graalvm.buildtools</groupId>
-                  <artifactId>native-maven-plugin</artifactId>
-                  <extensions>true</extensions>
-                  <executions>
-                     <execution>
-                        <id>build-native</id>
-                        <goals>
-                           <goal>compile</goal>
-                        </goals>
-                        <phase>prepare-package</phase>
-                     </execution>
-                  </executions>
-                  <configuration>
-                     <mainClass>${main-class}</mainClass>
-                     <imageName>./${binary-name}</imageName>
-                     <buildArgs>
-                        <arg>--verbose</arg>
-                        <arg>-march=compatibility</arg>
-                        <arg>-H:EnableURLProtocols=http,https</arg>
-                        <arg>--enable-https</arg>
-                        <arg>--no-fallback</arg>
-                        <arg>--report-unsupported-elements-at-runtime</arg>
-                        <arg>--features=org.eclipse.esmf.nativefeatures.SammCliFeature</arg>
-                        <arg>-H:-DeadlockWatchdogExitOnTimeout</arg>
-                        <arg>-H:DeadlockWatchdogInterval=0</arg>
-                        <arg>-H:+AddAllCharsets</arg>
-                        <arg>-H:+ReportExceptionStackTraces</arg>
-                        <arg>-H:+PrintClassInitialization</arg>
-                        <arg>-J-XX:MaxRAMPercentage=90.0</arg>
-                        <arg>-J-XX:GCTimeRatio=19</arg>
-                        <arg>-J--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=org.graalvm.nativeimage/org.graalvm.nativeimage.impl=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.configure=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jni=ALL-UNNAMED</arg>
-                        <arg>--initialize-at-build-time=org.eclipse.esmf.nativefeatures.Native</arg>
-                     </buildArgs>
-                     <quickBuild>true</quickBuild>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-   </profiles>
 </project>
